hphp/hack/test/typecheck/is_expression/merge_is_good_2.php.like_types.exp
File "merge_is_good_2.php", line 14, characters 28-30:
Invalid argument (Typing[4110])
File "printf.hhi", line 133, characters 30-56:
Expected ~HH\FormatString<~PlainSprintf> because it is an unenforceable type
File "merge_is_good_2.php", line 14, characters 28-30:
But got string
File "merge_is_good_2.php", line 16, characters 27-29:
Invalid argument (Typing[4110])
File "printf.hhi", line 133, characters 30-56:
Expected ~HH\FormatString<~PlainSprintf> because it is an unenforceable type
File "merge_is_good_2.php", line 16, characters 27-29:
But got string
